[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4"
futures = "0.3.30"
env_logger = "0.11.3"
log = "0.4.21"
tokio = "1.36.0"
tokio-util = "0.7.10"
sanitize-filename = "0.5.0"
image = "0.25.0"
